--- a/pa1/CSE234_PA1.ipynb
+++ b/pa1/CSE234_PA1.ipynb
@@ -172,13 +172,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+            "platform linux -- Python 3.11.8, pytest-8.3.4, pluggy-1.5.0\n",
+            "rootdir: /home/hardness1020/cse234-w25-PA/pa1\n",
+            "plugins: anyio-4.3.0\n",
+            "collected 13 items                                                             \u001b[0m\u001b[1m\n",
+            "\n",
+            "tests/test_auto_diff_node_forward.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                       [100%]\u001b[0m\n",
+            "\n",
+            "\u001b[32m============================== \u001b[32m\u001b[1m13 passed\u001b[0m\u001b[32m in 2.18s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
+            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+            "platform linux -- Python 3.11.8, pytest-8.3.4, pluggy-1.5.0\n",
+            "rootdir: /home/hardness1020/cse234-w25-PA/pa1\n",
+            "plugins: anyio-4.3.0\n",
+            "collected 12 items                                                             \u001b[0m\u001b[1m\n",
+            "\n",
+            "tests/test_auto_diff_node_backward.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                       [100%]\u001b[0m\n",
+            "\n",
+            "\u001b[32m============================== \u001b[32m\u001b[1m12 passed\u001b[0m\u001b[32m in 2.71s\u001b[0m\u001b[32m ==============================\u001b[0m\n",
+            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+            "platform linux -- Python 3.11.8, pytest-8.3.4, pluggy-1.5.0\n",
+            "rootdir: /home/hardness1020/cse234-w25-PA/pa1\n",
+            "plugins: anyio-4.3.0\n",
+            "collected 9 items                                                              \u001b[0m\u001b[1m\n",
+            "\n",
+            "tests/test_auto_diff_graph_forward.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                          [100%]\u001b[0m\n",
+            "\n",
+            "\u001b[32m============================== \u001b[32m\u001b[1m9 passed\u001b[0m\u001b[32m in 2.11s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+            "platform linux -- Python 3.11.8, pytest-8.3.4, pluggy-1.5.0\n",
+            "rootdir: /home/hardness1020/cse234-w25-PA/pa1\n",
+            "plugins: anyio-4.3.0\n",
+            "collected 2 items                                                              \u001b[0m\u001b[1m\n",
+            "\n",
+            "tests/test_auto_diff_graph_backward.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                [100%]\u001b[0m\n",
+            "\n",
+            "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 1.84s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+          ]
         }
-      },
-      "outputs": [],
+      ],
       "source": [
         "!pytest tests/test_auto_diff_node_forward.py\n",
         "!pytest tests/test_auto_diff_node_backward.py\n",
@@ -250,6 +289,43 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Avg_loss: 1.5432570319341694\n",
+            "Epoch 0: test accuracy = 0.5848, loss = 1.5432570319341694\n",
+            "Avg_loss: 1.2582301225699686\n",
+            "Epoch 1: test accuracy = 0.5984, loss = 1.2582301225699686\n",
+            "Avg_loss: 1.131331242108083\n",
+            "Epoch 2: test accuracy = 0.6465, loss = 1.131331242108083\n",
+            "Avg_loss: 1.0521890247236076\n",
+            "Epoch 3: test accuracy = 0.6761, loss = 1.0521890247236076\n",
+            "Avg_loss: 1.013327681896236\n",
+            "Epoch 4: test accuracy = 0.7087, loss = 1.013327681896236\n",
+            "Avg_loss: 0.9800865124827209\n",
+            "Epoch 5: test accuracy = 0.6771, loss = 0.9800865124827209\n",
+            "Avg_loss: 0.9629210343091514\n",
+            "Epoch 6: test accuracy = 0.7047, loss = 0.9629210343091514\n",
+            "Avg_loss: 0.9297837241044564\n",
+            "Epoch 7: test accuracy = 0.7128, loss = 0.9297837241044564\n",
+            "Avg_loss: 0.9221196278308805\n",
+            "Epoch 8: test accuracy = 0.721, loss = 0.9221196278308805\n",
+            "Avg_loss: 0.916983664740273\n",
+            "Epoch 9: test accuracy = 0.7306, loss = 0.916983664740273\n",
+            "Final test accuracy: 0.7306\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python3 transformer.py"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "BQ0asbSkD1QQ"
@@ -305,16 +381,192 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+            "platform linux -- Python 3.11.8, pytest-8.3.4, pluggy-1.5.0\n",
+            "rootdir: /home/hardness1020/cse234-w25-PA/pa1\n",
+            "plugins: anyio-4.3.0\n",
+            "collected 4 items                                                              \u001b[0m\u001b[1m\n",
+            "\n",
+            "tests/test_fused_ops.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                             [100%]\u001b[0m\n",
+            "\n",
+            "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 1.50s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+            "\n",
+            "================================================================================\n",
+            "Running benchmark: 2D Matrix Multiplication\n",
+            "================================================================================\n",
+            "\n",
+            "Testing shapes: (128, 64) @ (64, 128)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    0.107 ms ± 0.194 ms\n",
+            "Unfused:  0.089 ms ± 0.036 ms\n",
+            "Speedup:  0.83x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    0.787 ms ± 0.427 ms\n",
+            "Unfused:  0.730 ms ± 0.549 ms\n",
+            "Speedup:  0.93x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    0.076 ms ± 0.132 ms\n",
+            "Unfused:  0.380 ms ± 0.701 ms\n",
+            "Speedup:  4.98x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    1.193 ms ± 1.306 ms\n",
+            "Unfused:  0.892 ms ± 0.984 ms\n",
+            "Speedup:  0.75x\n",
+            "\n",
+            "Testing shapes: (512, 256) @ (256, 512)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    2.350 ms ± 0.744 ms\n",
+            "Unfused:  3.310 ms ± 1.572 ms\n",
+            "Speedup:  1.41x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    10.022 ms ± 2.624 ms\n",
+            "Unfused:  14.896 ms ± 5.196 ms\n",
+            "Speedup:  1.49x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    7.232 ms ± 9.647 ms\n",
+            "Unfused:  2.493 ms ± 0.623 ms\n",
+            "Speedup:  0.34x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    47.478 ms ± 6.629 ms\n",
+            "Unfused:  43.528 ms ± 7.307 ms\n",
+            "Speedup:  0.92x\n",
+            "\n",
+            "Testing shapes: (1024, 512) @ (512, 1024)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    17.882 ms ± 12.750 ms\n",
+            "Unfused:  15.666 ms ± 3.161 ms\n",
+            "Speedup:  0.88x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    48.372 ms ± 7.920 ms\n",
+            "Unfused:  66.053 ms ± 14.893 ms\n",
+            "Speedup:  1.37x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    19.704 ms ± 7.034 ms\n",
+            "Unfused:  18.163 ms ± 2.878 ms\n",
+            "Speedup:  0.92x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    415.295 ms ± 64.109 ms\n",
+            "Unfused:  519.836 ms ± 183.511 ms\n",
+            "Speedup:  1.25x\n",
+            "\n",
+            "================================================================================\n",
+            "Running benchmark: 3D Batch Matrix Multiplication\n",
+            "================================================================================\n",
+            "\n",
+            "Testing shapes: (32, 128, 64) @ (32, 64, 128)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    1.999 ms ± 1.106 ms\n",
+            "Unfused:  1.734 ms ± 1.068 ms\n",
+            "Speedup:  0.87x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    6.526 ms ± 1.252 ms\n",
+            "Unfused:  20.233 ms ± 28.865 ms\n",
+            "Speedup:  3.10x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    1.958 ms ± 0.615 ms\n",
+            "Unfused:  2.291 ms ± 0.977 ms\n",
+            "Speedup:  1.17x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    5.750 ms ± 1.143 ms\n",
+            "Unfused:  5.401 ms ± 1.462 ms\n",
+            "Speedup:  0.94x\n",
+            "\n",
+            "Testing shapes: (64, 256, 128) @ (64, 128, 256)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    14.872 ms ± 2.881 ms\n",
+            "Unfused:  15.374 ms ± 3.032 ms\n",
+            "Speedup:  1.03x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    78.002 ms ± 30.007 ms\n",
+            "Unfused:  132.846 ms ± 87.005 ms\n",
+            "Speedup:  1.70x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    19.398 ms ± 3.220 ms\n",
+            "Unfused:  17.201 ms ± 3.268 ms\n",
+            "Speedup:  0.89x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    57.116 ms ± 9.055 ms\n",
+            "Unfused:  82.186 ms ± 37.155 ms\n",
+            "Speedup:  1.44x\n",
+            "\n",
+            "Testing shapes: (128, 512, 256) @ (128, 256, 512)\n",
+            "\n",
+            "Testing MatMul + LayerNorm:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    270.495 ms ± 87.498 ms\n",
+            "Unfused:  268.289 ms ± 67.323 ms\n",
+            "Speedup:  0.99x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    1352.442 ms ± 501.337 ms\n",
+            "Unfused:  904.207 ms ± 240.914 ms\n",
+            "Speedup:  0.67x\n",
+            "\n",
+            "Testing MatMul + Softmax:\n",
+            "\n",
+            "Forward Pass:\n",
+            "Fused:    249.046 ms ± 43.550 ms\n",
+            "Unfused:  258.210 ms ± 49.947 ms\n",
+            "Speedup:  1.04x\n",
+            "\n",
+            "Backward Pass:\n",
+            "Fused:    4550.320 ms ± 774.250 ms\n",
+            "Unfused:  4819.886 ms ± 918.926 ms\n",
+            "Speedup:  1.06x\n"
+          ]
         }
-      },
-      "outputs": [],
+      ],
       "source": [
         "!pytest tests/test_fused_ops.py\n",
-        "!python tests/test_fused_ops_perf.py"
+        "!python3 tests/test_fused_ops_perf.py"
       ]
     },
     {
@@ -346,7 +598,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
